<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Stay Active</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exerciceTitle1">Neck Back and Forward</string>
    <string name="exerciceTitle2">Neck Rotation</string>
    <string name="exerciceTitle3">Neck Side Bend</string>
    <string name="exerciceTitle4">Shoulder Shrug</string>
    <string name="get_some_rest">Get some rest!</string>
    <string name="computer">TODO</string>
    <string name="description1">It is important to take a break from time to time, or else your health will deteorate down the line</string>
    <string name="next1">Next</string>
    <string name="title2">Take a Break</string>
    <string name="description2">This app will notify you to take a break and so some simple exercices</string>
    <string name="stretch">TODO</string>
    <string name="next2">Next</string>
    <string name="check">TODO</string>
    <string name="title3">Permissions</string>
    <string name="description3">In order for this application to be fully functioning, you need to accept the requested permissions. No sensible data will be collected</string>
    <string name="next3">Finish</string>
    <string name="home">Home</string>
    <string name="infodescription">This application was developed in the ambit of the Context Aware Systems class</string>
    <string name="exercises">Exercises</string>

</resources>
